Siudeks/issue299 (#307)
* Refactor entity version handling to use EntityVersion class and update related mappings and tests

* Update Spring Boot version to 3.5.5 and adjust EntityVersion mappings in CustomerMapper and CustomerRepositoryEx

* Refactor entity version handling: replace 'New' with 'Reserved' in EntityVersion and ShardedId, update related methods and tests

* Add nullAway

* Prepare shared-libs and build-tools to remove

* Remove shared-libs

* Partial delombok

* Add build-tools module and integrate Checkstyle configuration

* Add build-tools module and Checkstyle configuration